Implementation of  service parts classes